RESOLVED FIXED181914
Resign NowPlaying status when no media element is eligible
https://bugs.webkit.org/show_bug.cgi?id=181914
Summary Resign NowPlaying status when no media element is eligible
Eric Carlson
Reported 2018-01-21 10:37:45 PST
Resign NowPlaying status when no media element is eligible.
Attachments
Patch (22.98 KB, patch)
2018-01-21 10:57 PST, Eric Carlson
no flags
Fix crashing tests. (5.17 KB, patch)
2018-01-22 14:09 PST, Eric Carlson
ryanhaddad: commit-queue+
Patch to fix test crashes (5.17 KB, patch)
2018-01-22 16:39 PST, Ryan Haddad
no flags
Patch (26.23 KB, patch)
2018-01-23 14:19 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-01-21 10:38:29 PST
Eric Carlson
Comment 2 2018-01-21 10:57:34 PST
WebKit Commit Bot
Comment 3 2018-01-21 19:30:39 PST
Comment on attachment 331874 [details] Patch Clearing flags on attachment: 331874 Committed r227279: <https://trac.webkit.org/changeset/227279>
WebKit Commit Bot
Comment 4 2018-01-21 19:30:41 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 5 2018-01-22 09:32:40 PST
This change appears to have caused an assertion failure, seen here with media/video-main-content-autoplay.html: ASSERTION FAILED: isSafeToUpdateStyleOrLayout() /Volumes/Data/slave/highsierra-debug/build/Source/WebCore/dom/Document.cpp(1980) : void WebCore::Document::updateLayout() https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r227291%20(1718)/results.html
Ryan Haddad
Comment 6 2018-01-22 09:39:45 PST
I can reproduce the crash with a build of r227279 using the following command: run-webkit-tests media/video-main-content-autoplay.html media/video-main-content-deny-obscured.html -fg --iter 10 --no-retry I cannot reproduce with a build of r227278.
Matt Lewis
Comment 7 2018-01-22 09:58:58 PST
The same crash is also happening with the test media/video-main-content-allow-then-scroll.html
Eric Carlson
Comment 8 2018-01-22 14:09:04 PST
Created attachment 331963 [details] Fix crashing tests.
Ryan Haddad
Comment 9 2018-01-22 14:12:08 PST
Reopening to land patch.
Ryan Haddad
Comment 10 2018-01-22 16:39:19 PST
Created attachment 331977 [details] Patch to fix test crashes Attaching patch again to trigger EWS.
Ryan Haddad
Comment 11 2018-01-22 17:29:43 PST
Comment on attachment 331977 [details] Patch to fix test crashes Clearing flags on attachment: 331977 Committed r227373: <https://trac.webkit.org/changeset/227373>
Ryan Haddad
Comment 12 2018-01-22 17:29:45 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 13 2018-01-23 09:47:05 PST
API test NowPlayingControlsTests.NowPlayingControlsCheckRegistered is timing out after https://trac.webkit.org/changeset/227373
Ryan Haddad
Comment 14 2018-01-23 09:47:20 PST
*** Bug 181987 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 15 2018-01-23 09:50:25 PST
Re-opened since this is blocked by bug 181988
Ryan Haddad
Comment 16 2018-01-23 09:53:45 PST
Eric Carlson
Comment 17 2018-01-23 14:19:53 PST
WebKit Commit Bot
Comment 18 2018-01-23 15:34:12 PST
Comment on attachment 332073 [details] Patch Clearing flags on attachment: 332073 Committed r227457: <https://trac.webkit.org/changeset/227457>
WebKit Commit Bot
Comment 19 2018-01-23 15:34:13 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 20 2018-01-23 23:01:33 PST
Looks like this introduced a new crash: https://bugs.webkit.org/show_bug.cgi?id=182038 We can't trigger a layout within removedFromAncestor
Note You need to log in before you can comment on or make changes to this bug.