Source/WebCore/platform/audio/mac/MediaSessionManagerMac.mm
@@ -54,12 +54,6 @@ PlatformMediaSessionManager* PlatformMediaSessionManager::sharedManagerIfExists(
     return platformMediaSessionManager;
 }
 
-void PlatformMediaSessionManager::updateNowPlayingInfoIfNecessary()
-{
-    if (auto existingManager = (MediaSessionManagerMac *)PlatformMediaSessionManager::sharedManagerIfExists())
-        existingManager->scheduleUpdateNowPlayingInfo();
-}
-
 MediaSessionManagerMac::MediaSessionManagerMac()
     : PlatformMediaSessionManager()
 {
@@ -136,6 +130,10 @@ void MediaSessionManagerMac::updateNowPlayingInfo()
             MRMediaRemoteSetNowPlayingVisibility(MRMediaRemoteGetLocalOrigin(), MRNowPlayingClientVisibilityNeverVisible);
 
         LOG(Media, "MediaSessionManagerMac::updateNowPlayingInfo - clearing now playing info");
+
+        MRMediaRemoteSetCanBeNowPlayingApplication(false);
+        m_registeredAsNowPlayingApplication = false;
+
         MRMediaRemoteSetNowPlayingInfo(nullptr);
         m_nowPlayingActive = false;
         m_lastUpdatedNowPlayingTitle = emptyString();
@@ -154,10 +152,10 @@ void MediaSessionManagerMac::updateNowPlayingInfo()
         return;
     }
 
-    static dispatch_once_t enableNowPlayingToken;
-    dispatch_once(&enableNowPlayingToken, ^() {
+    if (!m_registeredAsNowPlayingApplication) {
+        m_registeredAsNowPlayingApplication = true;
         MRMediaRemoteSetCanBeNowPlayingApplication(true);
-    });
+    }
 
     String title = currentSession->title();
     double duration = currentSession->supportsSeeking() ? currentSession->duration() : MediaPlayer::invalidTime();
